<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linear_layout_wifi_view">
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/title_bg"
	    android:gravity="center_vertical"
	    android:orientation="horizontal">
	    
	    <ImageView
	        android:id="@+id/img_wifi_app_icon"
	    	android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/main_icon"
		    android:layout_margin="5dp"/>
	    
	    
		<TextView
		    android:id="@+id/txt_wifi_title"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:layout_marginLeft="10dp"
		    android:gravity="center"
		    android:orientation="vertical"
		    android:text="@string/wifi_title"
		    android:textColor="#ffffff"
		    android:textSize="16sp"
		    android:textStyle="bold"/>
	</LinearLayout>
   	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >
	    
	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:src="@drawable/wifi" />
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:gravity="center_vertical|center_horizontal"
	    	android:layout_margin="5dp">

	        <ProgressBar
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="10dp" />
	    	
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:layout_marginTop="10dp"
		        android:text="@string/wifi_msg"
		        android:textSize="15sp"
		        android:textColor="#000000"/>
		    
		</LinearLayout>
		
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:gravity="center_vertical|center_horizontal"
	        android:orientation="horizontal" >
	
	        <Button
	            android:id="@+id/btn_wifi_yes"
	            android:layout_width="80dp"
	            android:layout_height="wrap_content"
	            android:text="@string/wifi_btn_yes" />
	
	        <Button
	            android:id="@+id/btn_wifi_no"
	            android:layout_width="80dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:text="@string/wifi_btn_no" />
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>